--- a/app/package.json
+++ b/app/package.json
@@ -8,9 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.1.0",
     "core-js": "^3.8.3",
     "element-plus": "^2.3.4",
     "jsonwebtoken": "^9.0.0",
+    "svg-sprite-loader": "^6.0.11",
     "vue": "^3.2.13",
     "vue-class-component": "^8.0.0-0",
     "vue-router": "^4.0.3",
