--- a/app/package.json
+++ b/app/package.json
@@ -10,11 +10,13 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.1.0",
     "core-js": "^3.8.3",
+    "echarts": "^5.4.2",
     "element-plus": "^2.3.4",
     "jsonwebtoken": "^9.0.0",
     "svg-sprite-loader": "^6.0.11",
     "vue": "^3.2.13",
     "vue-class-component": "^8.0.0-0",
+    "vue-echarts": "^6.5.5",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0",
     "websocket": "^1.0.34",
