--- a/app/package.json
+++ b/app/package.json
@@ -9,11 +9,13 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.1.0",
+    "axios": "^1.4.0",
     "core-js": "^3.8.3",
     "echarts": "^5.4.2",
     "element-plus": "^2.3.4",
     "jsonwebtoken": "^9.0.0",
     "svg-sprite-loader": "^6.0.11",
+    "tesseract.js": "^4.1.0",
     "vue": "^3.2.13",
     "vue-class-component": "^8.0.0-0",
     "vue-echarts": "^6.5.5",
@@ -31,8 +33,11 @@
     "@vue/cli-plugin-typescript": "~5.0.0",
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "autoprefixer": "^10.4.14",
     "less": "^4.1.3",
     "less-loader": "^11.1.2",
+    "postcss": "^8.4.24",
+    "tailwindcss": "^3.3.2",
     "typescript": "~4.5.5"
   },
   "eslintConfig": {
