--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jsonwebtoken": "^9.0.0",
     "svg-sprite-loader": "^6.0.11",
     "tesseract.js": "^4.1.0",
+    "uuid": "^9.0.0",
     "vue": "^3.2.13",
     "vue-class-component": "^8.0.0-0",
     "vue-echarts": "^6.5.5",
@@ -25,6 +26,7 @@
     "ws": "^8.13.0"
   },
   "devDependencies": {
+    "@types/uuid": "^9.0.2",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "@vue/cli-plugin-babel": "~5.0.0",
