--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "echarts": "^5.4.2",
     "element-plus": "^2.3.4",
     "jsonwebtoken": "^9.0.0",
+    "nodemon": "^3.1.4",
     "svg-sprite-loader": "^6.0.11",
     "tesseract.js": "^4.1.0",
     "uuid": "^9.0.0",
