--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
       - "80:80"  # 将主机的80端口映射到容器的80端口
     depends_on:
       - backend  # 确保后端服务启动后再启动前端
+    environment:
+      - BACKEND_URL=ws://backend:3000  # 运行时传递环境变量
     networks:
       - app-network
 
