--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -29,6 +29,6 @@ jobs:
           docker push zhza4/game-team-system:latest
       - name: Deploy to Server
         run: |
-          ssh user@47.121.188.207 "docker pull zhza4/game-team-system:latest && docker stop game-team && docker rm game-team && docker run -d -p 8084:80 -e --name game-team zhza4/game-team-system:latest"
+          ssh root@47.121.188.207 "docker pull zhza4/game-team-system:latest && docker stop game-team && docker rm game-team && docker run -d -p 8084:80 -e --name game-team zhza4/game-team-system:latest"
         env:
           SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}  # 你的 SSH 密钥
