--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -39,4 +39,7 @@ jobs:
 
       - name: Deploy to Server
         run: |
-          ssh root@47.121.188.207 "docker pull zhza4/game-team-system:latest && docker stop game-team && docker rm game-team && docker run -d -p 8084:80 --name game-team zhza4/game-team-system:latest"
+          ssh root@47.121.188.207 "docker pull zhza4/game-team-system:latest && \
+          docker stop game-team || true && \
+          docker rm game-team || true && \
+          docker run -d -p 8084:80 --name game-team zhza4/game-team-system:latest"
