--- a/supervisord.conf
+++ b/supervisord.conf
@@ -2,9 +2,12 @@
 nodaemon=true
 
 [program:nginx]
-command=nginx -g "daemon off;"
+command=nginx -g 'daemon off;'
+autostart=true
 autorestart=true
 
-[program:nodemon]
-command=nodemon /app/serve/index.js
+[program:node]
+command=nodemon index.js
+directory=/app/serve
+autostart=true
 autorestart=true
