--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,18 +4,20 @@ services:
   frontend:
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile  # 使用同一个 Dockerfile
+      args:
+        TARGET: frontend  # 传递构建参数
     ports:
       - "80:80"  # 将主机的80端口映射到容器的80端口
-    depends_on:
-      - backend  # 确保后端服务启动后再启动前端
     networks:
       - app-network
 
   backend:
     build:
       context: .
-      dockerfile: Dockerfile.backend  # 创建单独的 Dockerfile 仅用于后端
+      dockerfile: Dockerfile  # 使用同一个 Dockerfile
+      args:
+        TARGET: backend  # 传递构建参数
     ports:
       - "3000:3000"
     networks:
