--- a/supervisord.conf
+++ b/supervisord.conf
@@ -7,7 +7,7 @@ autostart=true
 autorestart=true
 
 [program:node]
-command=nodemon index.js
+command=pm2 start index.js --name "game-team"
 directory=/app/serve
 autostart=true
 autorestart=true
